noTicket | Backend | Ajout des commentaires pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -13,33 +13,40 @@
 	<name>userRegister</name>
 	<description>Demo Spring Boot applications that starts H2 in  database, register user</description>
 	<dependencies>
+		<!-- Spring Boot provides spring-boot-starter-data-jpa dependency to connect 
+			Spring application with relational database efficiently -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
+		<!-- By default, the spring-boot-starter-web contains the following tomcat 
+			server dependency -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!-- the H2 database can be configured to run as an in-memory database -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+		<!-- Spring's Validation library dependency -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<!-- Spring's AOP library dependency -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+		<!-- The spring-boot-starter-test is the primary dependency that contains 
+			the majority of elements required for our tests. -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
